# PySoccer

./: README.md  pyproject.toml
pysoccer/: README.md  game.py  models.py
pysoccer/assets/player2/: default.avif
