[tool.poetry]
name = "pysoccer"
version = "0.1.0"
description = ""
authors = ["CesarMartinez <cesarwamartinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
panda3d = "^1.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
