[tool.poetry]
name = "pysoccer"
version = "0.1.0"
description = ""
authors = ["CesarMartinez <cesarwamartinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
panda3d = "^1.10.15"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
